view/styles/ui.styl
$text-color = hsl(205, 30%, 90%)
$theme-color = hsl(210, 50%, 30%)
$theme-color-dark = hsl(211, 50%, 23%)
$theme-color-light = lighten($theme-color, 10%)


highlight($color)
  background-color: rgba($color, 0.25)
  color: lighten($color, 20%)

*
  padding: 0
  margin: 0
  box-sizing: border-box
  color: inherit
  border: none
  outline: none
  outline-offset: 0
  resize: none

:root
  font: 14pt 'Roboto', sans-serif
  color: $text-color
  -webkit-font-smoothing: antialiased

h1, h2, h3, h4, h5, h6
  font-weight: 300
  opacity: 0.9
  margin: 1rem 0

ul, ol
  list-style: none

a
  text-decoration: none

[contenteditable]:empty::after
  content: attr(placeholder)
  opacity: 0.5
  font-style: italic
  cursor: text

::-webkit-scrollbar
  width: 0.5em
  height: 0.5em

::-webkit-scrollbar-track, ::-webkit-scrollbar-corner
  background-color: darken($theme-color-dark, 20%)

::-webkit-scrollbar-thumb
  background-color: $theme-color-light

::-webkit-scrollbar-button
  display: none

::selection
  background: rgba(black, 0.3)

.ui
  &.transition
    transition: 0.2s ease all

  &.noselect
    user-select: none

  &.small
    font-size: 75%

  &.subtle
    opacity: 0.5

  &.shadow
    box-shadow: 0px 4px 12px rgba(black, 0.2)

  &.theme-color
    &.main { background-color: $theme-color }
    &.dark { background-color: $theme-color-dark }
    &.light { background-color: $theme-color-light }
    &.darker { background-color: darken($theme-color-dark, 20%) }
    &.lighter { background-color: lighten($theme-color-light, 10%) }

  &.border
    border-bottom: 3px solid $theme-color-light

    &.bright
      border-bottom-color: lighten($theme-color-light, 30%)

  &.highlight
    &.green { highlight: rgb(39, 174, 96) }
    &.blue { highlight: rgb(52, 152, 219) }
    &.red { highlight: rgb(231, 76, 60) }
    &.section { border: none }

  &.hover-darken
    @extend .ui.transition
    cursor: pointer
    &:hover
      @extend .ui.theme-color.darker
      @extend .ui.border.bright

  &.focus-darken
    @extend .ui.transition
    &:focus
      @extend .ui.theme-color.darker
      @extend .ui.border.bright

  &.focus-lighten
    @extend .ui.transition
    &:focus
      @extend .ui.theme-color.light
      @extend .ui.border.bright

  &.fullscreen
    position: fixed
    left: 0
    top: 0
    right: 0
    bottom: 0

  &.overlay
    @extend .ui.fullscreen

    background-color: rgba(black, 0.3)
    display: flex
    justify-content: center
    align-items: center

  &.panel
    @extend .ui.theme-color.main
    @extend .ui.shadow

    width: min-content
    padding: 0em 1.5em
    text-align: center

  &.side-panel
    @extend .ui.panel
    position: absolute
    top: 0
    bottom: 0
    width: 12em
    padding: 0
    text-align: left

    &.left { left: 0 }
    &.right { right: 0 }

  &.section
    @extend .ui.theme-color.dark
    @extend .ui.border
    @extend .ui.transition
    @extend .ui.focus-darken
    width: 10rem
    padding: 0.4em 0.6em
    display: block

  &.section.icon
    position: relative

    .fa
      opacity: 0.5
      position: absolute
      top: 0.6em
      pointer-events: none

    &.left .fa { left: 0.6em }
    &.right .fa { right: 0.6em }

  &.text-input
    display: inline-block
    width: max-content

    input, [contenteditable]
      @extend .ui.section

    &.icon
      @extend .ui.section.icon

      &.left
        input, [contenteditable] { padding-left: 1.8em }

      &.right
        input, [contenteditable] { padding-right: 1.8em }

  &.button
    @extend .ui.theme-color.dark
    @extend .ui.border
    @extend .ui.hover-darken
    @extend .ui.focus-darken
    padding: 0.4em 1.5em
    user-select: none

  &.form
    .field
      margin-bottom: 1em

  &.selection
    @extend .ui.theme-color.dark
    @extend .ui.border
    @extend .ui.noselect

    width: 14em
    height: 18em
    list-style: none
    overflow-y: scroll
    display: inline-block

    li
      @extend .ui.hover-darken
      display: block
      padding: 0.5em

      &:hover
        border-bottom: none

      &.active
        $active-color = rgb(39, 174, 96)
        background-color: rgba($active-color, 0.3)
        color: lighten($active-color, 20%)

  &.pull.right
    float: right

  &.scroll
    overflow-y: auto

  &.link
    @extend .ui.transition
    text-decoration: none
    border-bottom: 1px solid rgba($text-color, 0.3)
    position: relative

    &:hover
      border-bottom-color: rgba($text-color, 0.8)

  &.divider
    border-bottom: 1px solid rgba($text-color, 0.2)

